# pla-laom

./: .gitignore  adapt_pla.py  plot_traj_action.py  pyproject.toml  requirements.txt  train_idm.py  train_laom.py  train_pla.py
pla_scripts/: run_clean.sh  run_distracting.sh  run_test.sh  sbatch.slurm
pla_scripts/mll/: adapt.sh  fine_tune.sh  run_distracting.sh  run_test.sh
pla_scripts/vista/: run_clean.sh  run_test.sh
slurm_jobs/: temp_submission.slurm
slurm_jobs/job_15586/: err.err  submission.sh
slurm_jobs/job_15587/: err.err  out.out  submission.sh
slurm_jobs/job_15588/: err.err
src/: nn.py  utils.py
